@@ -34,6 +34,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/apache">ASL</license>
  <notes>
+* [jan] Use more portable procmail recipe for rejects (Bug #7520).
 * [jan] Fix configuration of &apos;forward_file&apos; parameter (Bug #11989).
 * [mms] Require non-empty subject and reason fields when creating a vacation message (crohmann@netcologne.de; Request #8376).
 * [jan] Update French translation (Paul De Vlieger &lt;paul.de_vlieger@moniut.univ-bpclermont.fr&gt;).
@@ -1185,7 +1186,8 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/apache">ASL</license>
    <notes>
-* [jan] Fix configuration of &apos;forward_file&apos; paramter (Bug #11989).
+* [jan] Use more portable procmail recipe for rejects (Bug #7520).
+* [jan] Fix configuration of &apos;forward_file&apos; parameter (Bug #11989).
 * [mms] Require non-empty subject and reason fields when creating a vacation message (crohmann@netcologne.de; Request #8376).
 * [jan] Update French translation (Paul De Vlieger &lt;paul.de_vlieger@moniut.univ-bpclermont.fr&gt;).
    </notes>
